entendendo abreviações do vscode e algumas tags

--- a/estrutura.html
+++ b/estrutura.html
@@ -1,8 +1,32 @@
 <!--
     Estrutura básica do HTML
     HTML é case insensitive, não importa maiusculo ou minusculo
+
+    Para não escrever toda essa parte inicial, utilizamos o ! para facilitar,
+    Recurso que ajuda do próprio VSCode.
+
+    Se quisermos utilizar um placeholder de texto para parágrafos por exemplo,
+    utilizamos o recurso do VSCode: lorem, que digita um texto grande em Latim
+    para facilitar a vida
 -->
-<!-- rosa: tag
+<!--
+    TAGS HTML:
+    TAGS SEM CORPO:
+        <br> -> quebra de linha
+        <h1> -> vai até o h6, representa um título(ou um texto muito pequeno(h6))
+        <meta> -> armazena metadados, como charset:
+            name="viewport" permite que dispositivos móveis conectem com seu site, ajustando as devidas proporções
+    TAGS COM CORPO
+        <head></head> -> 'cabeçalho', guarda metadados e títulos da página
+        <span></span> -> agrupa elementos (texto) a nível de linha
+        <p></p> -> parágrafo
+    
+
+
+-->
+<!-- 
+    Com o tema darcula
+    rosa: tag
     verde: atributo
     amarelo: valor do atributo
 -->
@@ -15,18 +39,21 @@
 -->
 <!DOCTYPE html>
 <html lang="pt-BR">
-
 <head>
-    <meta charset="utf-8">
-    <title>meu título html</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Meu HTML</title>
 </head>
-
 <body>
+    <h1> Título! </h1>
     <p>
-        Olá Mundo
+        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        Magni, earum et ullam, nisi ducimus a odio consectetur placeat 
+        optio officia neque doloribus voluptas odit recusandae, 
+        natus voluptatum id ratione non.
     </p>
-
+    <span>Carlos Vinícius</span><br>
+    <span>Carlos Vinícius</span><br>
+    <span>Carlos Vinícius</span><br>
 </body>
-
 </html>
-
