--- a/site_netflix_basico.html
+++ b/site_netflix_basico.html
@@ -56,7 +56,7 @@
             display: block;
             padding: 15px 0;
             background: red;
-            border-radius: 25%;
+            border-radius: 20px;
             background-clip: content-box;
             
         }
