--- a/listas.html
+++ b/listas.html
@@ -11,6 +11,10 @@
     Posso passar como atributo
     type= "A" "I" "1" forma de como a lista ordenada fica
     start= "" começar de onde
+
+    nav a: hover { Passa estilos somente quando mouse hover
+
+    }
 -->
 
 <!DOCTYPE html>
@@ -28,19 +32,27 @@
         nav {
             display: flex;
             background: rgba(0, 0, 0, 0.5);
-            height: 50px;
             justify-content: center;
         }
-        
+
+        nav a:hover {
+            background: rgba(0, 0, 0, 0.2);
+        }
+       
         nav a {
             color: #fff;
             text-decoration: none;
             font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            background: red;
+            padding: 10px 20px;
+            display: block;
+            text-transform: uppercase;
         }
 
         nav ul{
             display: flex;
             list-style: none;
+            background: red;
         }
     </style>
 </head>
