importando mais de um arquivo css

--- a/separando_html_css/index.html
+++ b/separando_html_css/index.html
@@ -23,12 +23,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/styles.css">
+    <link rel="stylesheet" href="./assets/css/outro.css">
 
     <title>Document</title>
 </head>
 <body>
-    <div>
+    <div class="caixa1">
         <p>Oi</p>
+    </div>
+    <div class="caixa2">
+        <p>Olá</p>
     </div>
 </body>
 </html>
