Seletores CSS passados para seus próprios arquivos

--- a/estrutura_curso/estrutura_curso.html
+++ b/estrutura_curso/estrutura_curso.html
@@ -116,6 +116,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/css/styles.css">
     <title>Meu HTML</title>
     <!--
         Dentro da tag style aplicamos o CSS
@@ -129,49 +130,6 @@
         classe -> ID, o id é mais importante, ou seja, ele vai sobreescrever
         a classe em algumas situações
     -->
-    <style>
-        h1 { 
-            background-color: green;
-        }
-        p {
-            background-color: yellow;
-        }
-
-        #another-heading {
-            background-color:blue;   
-        }
-
-        #gandalf-imagem {
-            display: block;
-            margin-left: auto;
-            margin-right: auto;
-            width: 30%;
-        }
-
-        .fundo-vermelho {
-            background-color: red;
-        }
-
-        .pink{
-            color: pink;
-        }
-
-        .carlos {
-            color: brown;
-        }
-
-        .code{
-            font-size: 16px;
-            background-color: black;
-            color: white;
-        }
-        
-        .verde-e-grande {
-            color: springgreen;
-            font-size: larger;
-        }
-
-    </style>
 </head>
 <body>
     <h1 id="heading" class="fundo-vermelho borde-esquerda"> 
