--- a/inputs_e_formularios/formulario_input.html
+++ b/inputs_e_formularios/formulario_input.html
@@ -129,19 +129,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/css/styles.css">
     <title>formulário</title>
-    <style>
-        body {
-            font-family: sans-serif;
-        }
-
-        label {
-            cursor: pointer;
-            display: block;
-        }
-
-    </style>
-
 </head>
 <body>
     <section>
