--- a/introducao_cssboxmodel/introducao_cssbox_model.html
+++ b/introducao_cssboxmodel/introducao_cssbox_model.html
@@ -26,26 +26,9 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="./assets/css/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
-    <style>
-        .section-one, .section-two {
-            box-sizing: border-box;
-        }
-
-        .section-one{
-            background: deeppink;
-            border: 5px solid black;
-            width: 200px;
-            padding: 15px;
-            
-        }
-        .section-two{
-            background: cyan;
-        }
-
-    </style>
 </head>
 <body>
     <section class="section-one">
