--- a/listas/listas.html
+++ b/listas/listas.html
@@ -22,43 +22,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/css/styles.css">
     <title>Document</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-        }
-
-        nav {
-            display: flex;
-            background: rgba(0, 0, 0, 0.5);
-            justify-content: center;
-        }
-
-        nav a:hover {
-            background: rgba(0, 0, 0, 0.2);
-        }
-
-        nav a {
-            background: blue;
-        }
-       
-        nav a {
-            color: #fff;
-            text-decoration: none;
-            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-            background: red;
-            padding: 10px 20px;
-            display: block;
-            text-transform: uppercase;
-        }
-
-        nav ul{
-            display: flex;
-            list-style: none;
-            background: red;
-        }
-    </style>
 </head>
 <body>
     <nav>
