--- a/seletores_css/index.html
+++ b/seletores_css/index.html
@@ -11,12 +11,20 @@
 <body>
     <h1 class="heading">Heading</h1>
     <div class="main-content">
+        <section>
         <h2>Por que cachorros tem 4 patas?</h2>
         <p class="main-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
         Ipsum nisi ducimus quam commodi beatae, debitis
         eaque quis itaque incidunt ipsa minima harum repudiandae,
         quas dolorum magnam! Fuga reiciendis est
         temporibus!</p>
+        
+        <h3>Também tem isso daqui:</h3>
+        <p class="complementar-text">
+            Além disso, o tema também aborda a questão ético-moral da situação
+        </p>
+
+        </section>
 
         <section>
             <h1>Lorem Ipsum</h1>
@@ -24,6 +32,22 @@
 
         </section>
 
+        <section>
+            <div class="Pai">
+                div Pai
+                <div class="Filha">
+                    div Filha 1
+                    <div class="Filha">div Filha da Filha 1</div>
+                </div>
+                <div class="Filha">
+                    div Filha 2
+                    <div class="Filha">div Filha da Filha 2</div>
+                </div>
+            </div>            
+            <div class="Filha Pai">
+                .Pai.Filha
+            </div>
+        </section>
     </div>
 
 </body>
