Estilização por atributo

--- a/seletores_css_2/index.html
+++ b/seletores_css_2/index.html
@@ -40,6 +40,15 @@
         <div class="dois">2</div>
         <div class="um">1</div>
         <div class="tres">3</div>
+        <div atributo-bacana="valor1 valor2 valor3 valor4 valor5">
+            TENHO O VALOR2 VAMBORA
+        </div>
+        <div atributo-bacana="carro moto fusca aviao">
+            começo com carro
+        </div>
+        <div atributo-bacana="caleidoscopio cachorro mostarda mossarela">
+            não começo com carro
+        </div>
     </div>
 </body>
 
