--- a/pseudo_classes/index.html
+++ b/pseudo_classes/index.html
@@ -9,6 +9,8 @@
 <body>
     <input type="text" disabled>
     <input type="text">
+    <label for="requerido">Requerido</label>
+    <input type="text" id="requerido"required>
     <input type="checkbox">
     <p>Olá mundo</p>
     <h1 class="heading">
